--- a/src/app/tab5/about/about.component.scss
+++ b/src/app/tab5/about/about.component.scss
@@ -73,7 +73,7 @@
         height: 100%;
         position: absolute;
         z-index: 0;
-        background: url("https://lh3.googleusercontent.com/IJWByEzcFwRzBUooCEsk0Vf3FzxcNZoVy2z473upWfoa8ew0DHrVhwRuxG4KmruGGHQsx82xfnLZyaQVkb3nuQGf0yXkY-3DLWfVSs8lXdhRFMLsJJA01RzLd1Q3VZt6js-upJaeAPLa4hfX6M7yggLAwNYpqJPkO4TSa7cq64uTtph3a6xqK6pT7S0D-UpALWe5PQ0qWcEVGv5Ov2ResWerJcFLqY40_TH7PJ6ywjp1twkoDTWCfyUSd1YNLs9JsEIbMJNCnVDjmmXUwlAMW0FPhvlVdgqU9_YN1gDdzZ6MYFxQHlzKR6hP7KJqYl77bzxGoYCc1xzrQgJUf2jOq1fGXf_cxZRxfuKoLKi4vsUfk1nnHS9HVmF9_RPDekoL6RgppPSXWlKTli33MHmTsCbUDc6je_8zHmJRI8VM8uhbrEiBCyFKtJEmMY2Pur9JpEUqX6CvgTIa-CxmTRZds64mQPEI2USxQSxofV4ksu3aJ68FuTutl7-ZUO7FptsOwkrdqfvl4m9Cpi442ov0K7eRb_C_iMY1MLWl840Stcbl7HoFGtfHaXTy-emDOAqshSkf5z5PVopwz_qE29j6LfcMSmtFU_qS3r6vVAKETNi9A-UZW3jO7ltRYLoqraYvXq4xVcwRGXvbTB009GpbYGBU1Ky3s7V25QUIf4bxRROp3-2eol4SZBHhaEMuXw=w723-h903-no")no-repeat center center/cover;
+        background: url("https://i.imgur.com/BDJPWUf.jpg") no-repeat center center/cover;
         opacity: 0.5;
         mix-blend-mode: lighten;
       }
