--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -11,6 +11,11 @@ ionic-selectable {
 ion-card{
     padding: 0 !important;
     margin-bottom: 25px;
+    box-shadow: 0 5px 15px rgba(0,0,0,.05) !important;
+  }
+
+  ion-searchbar {
+    box-shadow: 0 5px 15px rgba(0,0,0,.05) !important;
   }
   
   td , ion-card{
