--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -13,3 +13,9 @@ ion-card{
   box-shadow: none !important;
   border: 1px solid
 }
+
+
+.ripple-parent {
+	position: relative;
+	overflow: hidden;
+  }
